<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Restaurant Offers</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="logo">Logo</string>
    <string name="brandName">Brand Name</string>
    <string name="offers">Offers</string>
    <string name="categories">Categories</string>
    <string name="distance">Distance</string>
</resources>
