<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    android:padding="6dip"
    android:layout_marginTop="2.5dp"
    android:layout_marginBottom="2.5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="6dip"
            android:layout_weight="0.4"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.6"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvBrandName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center_vertical"
                android:text="@string/brandName"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvOffers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@string/offers"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/tvCategoryType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/categories"
            android:layout_marginTop="6dp"
            android:singleLine="true"
            android:textSize="16sp" />
        
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location" />
	        
	        <TextView
	            android:id="@+id/tvDistanceWithNeightbourhood"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_vertical"
	            android:text="@string/distance"
	            android:layout_marginTop="6dp"
	            android:textSize="16sp" />
	    </LinearLayout>
    </LinearLayout>
</LinearLayout>